Updated css to stop navbar covering hero image text on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -10975,7 +10975,7 @@ hr.divider-light {
 /* Home Page Image */
 
 header.masthead {
-  padding-top: 10rem;
+  padding-top: 55%;
   padding-bottom: calc(10rem - 4.5rem);
   background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/Vibrotonetempmainimage.jpg");
   background-position: center;
